# relaylm

./: .gitignore  .pymarkdownlnt.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.opencode/command/: speckit.tasks.md
.semgrep/: semgrep.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: config.md  guide.md
scripts/: __init__.py  check_docs_sync.py  check_version.py  setup_branch_protection.sh
specs/001-ai-router-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-comprehensive-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ci-cd-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cli-autoconfig/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/relaylm/: __main__.py  _buildinfo.py  platform.py
tests/: smoke_test.py
tests/integration/: test_autoconfig_cli.py
tests/unit/: test_agent_detection.py  test_agent_detector.py  test_agent_version.py  test_autoconfig_result.py  test_backup.py  test_buildinfo.py  test_check_docs_sync.py  test_check_version.py  test_claude_code_detection.py  test_config_loader.py  test_container_runtime.py  test_keychain.py  (+8 more)
(+24 files in other folders)
